persistent storage added

--- a/manifests/grafana-dashboardDefinitions.yaml
+++ b/manifests/grafana-dashboardDefinitions.yaml
@@ -20959,7 +20959,7 @@ items:
                           {
                               "evaluator": {
                                   "params": [
-                                      0.84999999999999998
+                                      0.85
                                   ],
                                   "type": "gt"
                               },
@@ -21054,7 +21054,7 @@ items:
                           "fill": true,
                           "line": true,
                           "op": "gt",
-                          "value": 0.84999999999999998
+                          "value": 0.85
                       }
                   ],
                   "timeFrom": null,
